--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -86,10 +86,11 @@
 			
 			<div class="row">
 				<div class="col-md-6" ng-repeat="rc in receiverList">
-					<div style="text-align: center; margin-bottom: 10px;">
+					<div style="margin-bottom: 3px;">
 						<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 50px 5px 50px; cursor: pointer;" ng-click="changeReceiver(rc)">
 						{{ rc.receiverName }}
 						</span>
+						<span style="margin-right: 5px; color: black;" class="label label-warning" ng-repeat="rcIna in receiverInactiveList">{{ rcIna.receiverName }}</span>
 					</div>
 					<div ng-include="'./views/manageOrder/orderGroup.html'"></div>
 				</div>
