--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -63,7 +63,7 @@
 	                
 	<div class="row">
 		<div class="col-md-12">
-			<div class="panel panel-default panel-style" style="margin-bottom: 10px;">
+			<div class="panel panel-default panel-style" style="margin-bottom: 0px;">
 				<div class="panel-body">
 					<form class="form-inline">
 						<div class="form-group input-group">
@@ -86,13 +86,19 @@
 			
 			<div class="row">
 				<div class="col-md-6" ng-repeat="rc in receiverList">
-					<div style="margin-bottom: 3px;">
-						<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 50px 5px 50px; cursor: pointer;" ng-click="changeReceiver(rc)">
+					<div style="margin-bottom: 0px;">
+						<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 20px 5px 20px; cursor: pointer;" ng-click="changeReceiver(rc)">
 						{{ rc.receiverName }}
 						</span>
 						<span style="margin-right: 5px; color: black;" class="label label-warning" ng-repeat="rcIna in receiverInactiveList">{{ rcIna.receiverName }}</span>
 					</div>
 					<div ng-include="'./views/manageOrder/orderGroup.html'"></div>
+					
+					<div ng-class="{'pull-right': $index == 0}" ng-hide="isDnDable || formData.orderType == 0 || formData.orderType == 5 || formData.orderType == 6">
+						<i class="fa fa-2x" ng-class="{'fa-share': $index == 0, 'fa-reply': $index == 1}" style="color: #337ab7; cursor: pointer;" 
+						title="ย้ายข้อมูลการซื้อ"
+						ng-click="moveOrder($index)"></i>
+					</div>				
 				</div>
 			</div>
             
