--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -80,6 +80,10 @@
 								ng-change="changeTab(formData.orderType)">
 							</select>
 						</div>
+						<div class="form-group input-group input-group-sm">
+							<span class="input-group-addon">ค้นหา</span>
+							<input type="text" class="form-control" placeholder="เลขที่ซื้อ" ng-model="formData.orderNumber" />
+						</div>
 					</form>
 				</div>
 			</div>
