--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -3,7 +3,7 @@
 		<div class="tab-content">
 			<div class="tab-pane fade" id="home-pills" ng-class="{'active in': tabActived == 0}">
 				<div class="form-group input-group pull-right" style="z-index: 1000;">
-					<i class="fa fa-file-archive-o fa-2x" style="cursor: pointer; color: #555;" title="Export" ng-click="exportOrder(rc.id)"></i>
+					<i class="fa fa-download fa-2x" style="cursor: pointer; color: #2071b6; margin: 5px 5px 0 0;" title="Download" ng-click="exportOrder(rc.id)"></i>
 				</div>
 				<div class="form-horizontal" style="margin-bottom: 10px; border-radius: 5px; background-color: #85a985; padding-bottom: 5px; padding-left: 10px;">
 					<div class="checkbox">
@@ -25,7 +25,6 @@
 							<th style="width: 15%">หมายเหตุ</th>
 						</tr>
 					</thead>
-					
 					
 					<tbody id="orderDataInput"
 							dnd-list="orderData[rc.id]"
