--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -85,7 +85,7 @@
 				                	<br />
 				                	
 									<form class="form-horizontal order-form">
-										<fieldset ng-disabled="isFormDisable">
+										<fieldset ng-disabled="isFormDisable || isDnDable">
 										<div class="form-group">
 											<label class="col-md-3 control-label input-sm">ชื่อ</label>
 										    <div class="col-md-9">
