--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -91,7 +91,7 @@
 			<div class="row">
 				<div class="col-md-6" ng-repeat="rc in receiverList">
 					<div style="margin-bottom: 0px;">
-						<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 20px 5px 20px;">
+						<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 20px 5px 20px; border-radius: 13px;">
 						{{ rc.receiverName }}
 						</span>
 						<span style="margin-right: 5px; color: black; cursor: pointer;" class="label label-warning" ng-repeat="rcIna in receiverInactiveList" ng-click="changeReceiver(rcIna, $parent.$index)">{{ rcIna.receiverName }}</span>
