--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -90,7 +90,7 @@
 											            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
 											            	{{ data.subject }} / 
 											          	</label>
-										            	<span class="small">{{ data.detail }}</span>
+										            	<span class="small">{{ data.contractNo }} / {{ data.detail }}</span>
 											        </span>
 												</span>
 											</div>
