--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -96,6 +96,10 @@ text-decoration: none;
 background-color: #eee;
 }
 
+.sidebar-style a {
+	color: black;
+}
+
 
 /* [ui-view].ng-enter,[ui-view].ng-leave{
 	position:relative;left:0;right:0;transition:all .5s ease-in-out
