--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -1,5 +1,6 @@
-<div class="panel panel-default panel-style">
-	<div class="panel-body">
+<div class="row">
+	<div class="col-md-12">
+	
 		<div class="tab-content">
 			<div style="position: absolute; top: 30%; left: 50%; z-index: 1000;" ng-show="isLoadProgress && ($index == receiverChangeIndex || receiverChangeIndex == null)">
 				<div style="position: relative; left: -50%;">
@@ -8,27 +9,49 @@
 			</div>
 				
 			<div class="tab-pane fade" id="home-pills" ng-class="{'active in': tabActived == 0}">
-				<div class="form-group input-group pull-right" style="z-index: 1000;">
+				<div class="form-group input-group pull-right" style="z-index: 1000; margin: 0;">
 					<i class="fa fa-download fa-2x" style="cursor: pointer; color: #2071b6; margin: 5px 5px 0 0;" title="Download" ng-click="exportOrder(rc.id)"></i>
 				</div>
-				<div class="form-horizontal" style="margin-bottom: 10px; border-radius: 5px; background-color: #85a985; padding-bottom: 5px; padding-left: 10px;">
+				<div class="form-horizontal" style="margin-bottom: 5px; border-radius: 5px; background-color: #85a985; padding-bottom: 5px; padding-left: 10px; border: .5px solid #ffffffa6;">
 					<div class="checkbox">
-						<label> <input type="checkbox" ng-model="checkBoxType.bon3" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 3 ตัว
-						</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <label> <input type="checkbox" ng-model="checkBoxType.bon2" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 2 ตัวบน
-						</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <label> <input type="checkbox" ng-model="checkBoxType.lang2" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 2 ตัวล่าง
-						</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <label> <input type="checkbox" ng-model="checkBoxType.loy" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> ลอย
-						</label>
+						<label>
+					      <input type="checkbox" ng-model="chkbox.checkBoxTypeAll" ng-true-value="true" ng-false-value="false" ng-change="checkBoxTypeAllFn()"> All
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.bon3" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 3 บน
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.bon2" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 2 บน
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.lang2" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> 2 ล่าง
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.loy" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> ลอย
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.pair4" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> แพ 4
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.pair5" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> แพ 5
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.runBon" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> วิ่งบน
+					    </label>&nbsp;&nbsp;&nbsp;
+					    <label>
+					      <input type="checkbox" ng-model="checkBoxType.runLang" ng-true-value="true" ng-false-value="false" ng-change="chkBoxTypeChange()"> วิ่งล่าง
+					    </label>
 					</div>
 				</div>
 				
-				<table class="table table-hover result-panel table-fixed">
+				<table class="table table-hover result-panel table-fixed" style="">
 					<thead>
 						<tr>
 							<th style="width: 8%">#</th>
-							<th style="width: 20%">วันที่</th>
-							<th style="width: 27%">ชื่อ</th>
+							<th style="width: 17%">วันที่</th>
+							<th style="width: 29%">ชื่อ</th>
 							<th style="width: 30%">เลขที่ซื้อ</th>
-							<th style="width: 15%">หมายเหตุ</th>
+							<th style="width: 16%">หมายเหตุ</th>
 						</tr>
 					</thead>
 					
@@ -42,10 +65,10 @@
 							dnd-effect-allowed="move">
 					
 							<td style="width: 8%; font-size: 12px;">{{ $index + 1 }})</td>
-							<td style="width: 20%; font-size: 12px;">{{ ord.createdDateTime | date:'dd/MM HH:mm' }}</td>
-							<td style="width: 27%; font-size: 12px;">{{ ord.name }}</td>
+							<td style="width: 17%; font-size: 12px;">{{ ord.createdDateTime | date:'dd/MM HH:mm' }}</td>
+							<td style="width: 29%; font-size: 12px;">{{ ord.name }}</td>
 							<td style="width: 30%">{{ ord.symBol }}</td>
-							<td style="width: 15%;">{{ ord.note || '&nbsp;' }}</td>
+							<td style="width: 16%;">{{ ord.note || '&nbsp;' }}</td>
 						</tr>
 					</tbody>
 				</table>
@@ -92,7 +115,11 @@
 				</div>
 			</div>
 
-			<div class="tab-pane fade fixedheader" id="home-pills" ng-class="{'active in': tabActived == 1}">
+			<!-- <div class="tab-pane fade fixedheader" id="home-pills" ng-class="{'active in': tabActived == 1}"> -->
+			<div class="tab-pane fade fixedheader" id="home-pills" ng-class="{'active in': tabActived == 1 || tabActived == 2 || tabActived == 3 ||
+											                     							tabActived == 4 || tabActived == 41 || tabActived == 42 || 
+											                     							tabActived == 43 || tabActived == 44 || tabActived == 5}">
+											                     							
 				<table class="table table-hover result-panel table-fixed">
 					<thead>
 						<tr>
@@ -115,106 +142,14 @@
 					<span class="pull-right" style="font-weight: 700;"> รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp; </span>
 				</div>
 			</div>
-			<div class="tab-pane fade fixedheader" id="profile-pills" ng-class="{'active in': tabActived == 2}">
-				<table class="table table-hover result-panel table-fixed">
-					<thead>
-						<tr>
-							<th style="width: 15%">#</th>
-							<th style="width: 30%">เลขที่ซื้อ</th>
-							<th style="width: 35%">ราคารวม</th>
-							<th style="width: 20%">จำนวน</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="ord in orderData[rc.id] | filter:{'_id': formData.orderNumber}:comparator">
-							<td style="width: 15%">{{ $index + 1 }})</td>
-							<td style="width: 30%">{{ ord._id }}</td>
-							<td style="width: 35%">{{ ord.totalPrice | number:2}}</td>
-							<td style="width: 20%">{{ ord.count | number:0 }}</td>
-						</tr>
-					</tbody>
-				</table>
-				<div>
-					<span class="pull-right" style="font-weight: 700;"> รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp; </span>
-				</div>
-			</div>
-			<div class="tab-pane fade fixedheader" id="profile-pills" ng-class="{'active in': tabActived == 3}">
-				<table class="table table-hover result-panel table-fixed">
-					<thead>
-						<tr>
-							<th style="width: 15%">#</th>
-							<th style="width: 30%">เลขที่ซื้อ</th>
-							<th style="width: 35%">ราคารวม</th>
-							<th style="width: 20%">จำนวน</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="ord in orderData[rc.id] | filter:{'_id': formData.orderNumber}:comparator">
-							<td style="width: 15%">{{ $index + 1 }})</td>
-							<td style="width: 30%">{{ ord._id }}</td>
-							<td style="width: 35%">{{ ord.totalPrice | number:2}}</td>
-							<td style="width: 20%">{{ ord.count | number:0 }}</td>
-						</tr>
-					</tbody>
-				</table>
-				<div>
-					<span class="pull-right" style="font-weight: 700;"> รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp; </span>
-				</div>
-			</div>
-			<div class="tab-pane fade fixedheader" id="profile-pills" ng-class="{'active in': tabActived == 4}">
-				<table class="table table-hover result-panel table-fixed">
-					<thead>
-						<tr>
-							<th style="width: 15%">#</th>
-							<th style="width: 30%">เลขที่ซื้อ</th>
-							<th style="width: 35%">ราคารวม</th>
-							<th style="width: 20%">จำนวน</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="ord in orderData[rc.id] | filter:{'_id': formData.orderNumber}:comparator">
-							<td style="width: 15%">{{ $index + 1 }})</td>
-							<td style="width: 30%">{{ ord._id }}</td>
-							<td style="width: 35%">{{ ord.totalPrice | number:2}}</td>
-							<td style="width: 20%">{{ ord.count | number:0 }}</td>
-						</tr>
-					</tbody>
-				</table>
-				<div>
-					<span class="pull-right" style="font-weight: 700;"> รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp; </span>
-				</div>
-			</div>
-			<div class="tab-pane fade fixedheader" id="profile-pills" ng-class="{'active in': tabActived == 5}">
-				<table class="table table-hover result-panel table-fixed">
-					<thead>
-						<tr>
-							<th style="width: 15%">#</th>
-							<th style="width: 30%">เลขที่ซื้อ</th>
-							<th style="width: 35%">ราคารวม</th>
-							<th style="width: 20%">จำนวน</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr ng-repeat="ord in orderData[rc.id] | filter:{'_id': formData.orderNumber}:comparator">
-							<td style="width: 15%">{{ $index + 1 }})</td>
-							<td style="width: 30%">{{ ord._id }}</td>
-							<td style="width: 35%">{{ ord.totalPrice | number:2}}</td>
-							<td style="width: 20%">{{ ord.count | number:0 }}</td>
-						</tr>
-					</tbody>
-				</table>
-				<div>
-					<span class="pull-right" style="font-weight: 700;"> รวม {{ totalPriceSum[rc.id] | number:2 }}&nbsp;&nbsp;&nbsp;&nbsp; </span>
-				</div>
-			</div>
+			
 			<div class="tab-pane fade" id="profile-pills" ng-class="{'active in': tabActived == 6}">
 				<div>
-					<div class="panel panel-default result-panel">
-						<div class="panel-body">
-							<div>
-								<span class="pull-right" style="font-weight: 700; text-decoration: underline;">3 ตัวบน</span>
-							</div>
-							<table class="table table-hover">
+				
+					<div class="panel panel-default result-panel" style="margin-bottom: 5px;" ng-repeat="resG in resultGroup1[rc.id]">
+		            	<div class="panel-body">
+                        		<div><span class="pull-right" style="font-weight: 700; text-decoration: underline;">{{ resG.title }}</span></div>
+	                         <table class="table table-hover">
 								<thead>
 									<tr>
 										<td>#</td>
@@ -224,113 +159,26 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr ng-repeat="res in result3[rc.id]">
+									<tr ng-repeat="res in resG.result">
 										<td>{{ $index + 1 }}</td>
 										<td>{{ res._id }}</td>
-										<td>{{ res.price }}</td>
+										<td>{{ resG.title == 'โต๊ด' ? res.todPrice : res.price }}</td>
 										<td>-</td>
 									</tr>
-									<tr ng-show="result3[rc.id].length == 0">
-										<td colspan="4" style="text-align: center;"><i class="fa fa-ban fa-3x" style="color: red;"></i></td>
+									<tr ng-show="resG.result.length == 0">
+										<td colspan="4" style="text-align: center;">
+											<i class="fa fa-ban fa-3x" style="color: red;"></i>
+										</td>
 									</tr>
 								</tbody>
-							</table>
-						</div>
+							</table>									                	
+		                </div>
 					</div>
 
-					<div class="panel panel-default result-panel">
-						<div class="panel-body">
-							<div>
-								<span class="pull-right" style="font-weight: 700; text-decoration: underline;">โต๊ด</span>
-							</div>
-							<table class="table table-hover">
-								<thead>
-									<tr>
-										<td>#</td>
-										<td>ชื่อ</td>
-										<td>ราคาซื้อ</td>
-										<td>ราคาจ่าย</td>
-									</tr>
-								</thead>
-								<tbody>
-									<tr ng-repeat="res in resultTod[rc.id]">
-										<td>{{ $index + 1 }}</td>
-										<td>{{ res._id }}</td>
-										<td>{{ res.todPrice }}</td>
-										<td>-</td>
-									</tr>
-									<tr ng-show="resultTod[rc.id].length == 0">
-										<td colspan="4" style="text-align: center;"><i class="fa fa-ban fa-3x" style="color: red;"></i></td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-
-					<div class="panel panel-default result-panel">
-						<div class="panel-body">
-							<div>
-								<span class="pull-right" style="font-weight: 700; text-decoration: underline;">2 ตัวบน</span>
-							</div>
-							<table class="table table-hover">
-								<thead>
-									<tr>
-										<td>#</td>
-										<td>ชื่อ</td>
-										<td>ราคาซื้อ</td>
-										<td>ราคาจ่าย</td>
-									</tr>
-								</thead>
-								<tbody>
-									<tr ng-repeat="res in resultBon2[rc.id]">
-										<td>{{ $index + 1 }}</td>
-										<td>{{ res._id }}</td>
-										<td>{{ res.price }}</td>
-										<td>-</td>
-									</tr>
-									<tr ng-show="resultBon2[rc.id].length == 0">
-										<td colspan="4" style="text-align: center;"><i class="fa fa-ban fa-3x" style="color: red;"></i></td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-
-					<div class="panel panel-default result-panel">
-						<div class="panel-body">
-							<div>
-								<span class="pull-right" style="font-weight: 700; text-decoration: underline;">2 ตัวล่าง</span>
-							</div>
-							<table class="table table-hover">
-								<thead>
-									<tr>
-										<td>#</td>
-										<td>ชื่อ</td>
-										<td>ราคาซื้อ</td>
-										<td>ราคาจ่าย</td>
-									</tr>
-								</thead>
-								<tbody>
-									<tr ng-repeat="res in resultLang2[rc.id]">
-										<td>{{ $index + 1 }}</td>
-										<td>{{ res._id }}</td>
-										<td>{{ res.price }}</td>
-										<td>-</td>
-									</tr>
-									<tr ng-show="resultLang2[rc.id].length == 0">
-										<td colspan="4" style="text-align: center;"><i class="fa fa-ban fa-3x" style="color: red;"></i></td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-
-					<div class="panel panel-default result-panel" style="margin-bottom: 0;">
-						<div class="panel-body">
-							<div>
-								<span class="pull-right" style="font-weight: 700; text-decoration: underline;">ลอย</span>
-							</div>
-							<table class="table table-hover">
+					<div class="panel panel-default result-panel" style="margin-bottom: 5px;" ng-repeat="resG in resultGroup2[rc.id]">
+		            	<div class="panel-body">
+                        		<div><span class="pull-right" style="font-weight: 700; text-decoration: underline;">{{ resG.title }}</span></div>
+	                         <table class="table table-hover">
 								<thead>
 									<tr>
 										<td>#</td>
@@ -342,22 +190,26 @@
 								</thead>
 								<tbody>
 									<tr>
-									<tr ng-repeat="res in resultLoy[rc.id]">
+										<tr ng-repeat="res in resG.result">
 										<td>{{ $index + 1 }}</td>
 										<td>{{ res.name }}</td>
 										<td>{{ res.orderNumber }}</td>
 										<td>{{ res.price }}</td>
 										<td>-</td>
 									</tr>
-									<tr ng-show="resultLoy[rc.id].length == 0">
-										<td colspan="5" style="text-align: center;"><i class="fa fa-ban fa-3x" style="color: red;"></i></td>
+									<tr ng-show="resG.result.length == 0">
+										<td colspan="5" style="text-align: center;">
+											<i class="fa fa-ban fa-3x" style="color: red;"></i>
+										</td>
 									</tr>
 								</tbody>
-							</table>
-						</div>
+							</table>									                	
+		                </div>
 					</div>
+					
 				</div>
 			</div>
 		</div>
+		
 	</div>
 </div>
