--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -92,12 +92,21 @@ body {
 }
 
 .nav>li.active>a {
-text-decoration: none;
-background-color: #eee;
+	text-decoration: none;
+	background-color: #eee;
 }
 
 .sidebar-style a {
-	color: black;
+	color: #4c7c4c;
+	font-weight: 600;
+}
+.sidebar-style a i {
+	color: #85a985;
+	text-shadow: 1px 1px black;
+}
+h3.page-header {
+	color: #85a985;
+	text-shadow: 1px 1px black;
 }
 
 
