--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -49,7 +49,7 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="page-header">จัดการข้อมูลการซื้อ</h1>
+			<h3 class="page-header"><i class="fa fa-sitemap fa-fw"></i> จัดการข้อมูล</h3>
 		</div>
 	</div>
 	                
@@ -84,7 +84,7 @@
 								<span class="badge" style="background-color: #337ab7; font-size: 16px; padding: 5px 20px 5px 20px; border-radius: 13px;">
 								{{ rc.receiverName }}
 								</span>
-								<span style="margin-right: 5px; color: black; cursor: pointer;" class="label label-warning" ng-repeat="rcIna in receiverInactiveList" ng-click="changeReceiver(rcIna, $parent.$index)">{{ rcIna.receiverName }}</span>
+								<span style="margin-right: 5px; color: black; cursor: pointer;" class="label label-info" ng-repeat="rcIna in receiverInactiveList" ng-click="changeReceiver(rcIna, $parent.$index)">{{ rcIna.receiverName }}</span>
 							</div>
 							<div ng-include="'./views/manageOrder/orderGroup.html'"></div>
 							
