--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -56,7 +56,7 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="page-header">บันทึกข้อมูลการซื้อ</h1>
+			<h3 class="page-header"><i class="fa fa-book fa-fw"></i> บันทึกข้อมูล</h3>
 		</div>
 	</div>
 	            
