--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -13,14 +13,14 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="page-header">ตั้งค่า</h1>
+			<h3 class="page-header"><i class="fa fa-cog fa-fw"></i> ตั้งค่า</h3>
 		</div>
 	</div>
 	                
 	<div class="row">
 		<div class="col-md-6">
-			<div class="panel panel-green">
-                <div class="panel-heading">ข้อมูลผู้รับ</div>
+			<div class="panel panel-green" style="border-color: #98b799;">
+                <div class="panel-heading" style="background-color: #98b799; border-color: #98b799;">ข้อมูลผู้รับ</div>
                 <div class="panel-body">
             		<table class="table table-hover" id="tbSortable">
 					    <thead>
