--- a/backend/src/main/webapp/app/views/setting/main.html
+++ b/backend/src/main/webapp/app/views/setting/main.html
@@ -20,7 +20,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<div class="panel panel-green" style="border-color: #98b799;">
-                <div class="panel-heading" style="background-color: #98b799; border-color: #98b799;">ข้อมูลผู้รับ</div>
+                <div class="panel-heading" style="background-color: #98b799; border-color: #98b799; color: black;">ข้อมูลผู้รับ</div>
                 <div class="panel-body">
             		<table class="table table-hover" id="tbSortable">
 					    <thead>
