--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -286,7 +286,7 @@
 													</tr>
 											    </thead>
 											    <tbody id="orderDataInput" class="disable-select">
-											     	<tr ng-repeat="ord in orderData | filter:{'orderNumber': formData.orderNumberSearch}:comparator" ng-dblclick="updateDell(ord)">
+											     	<tr ng-repeat="ord in orderData | filter:{'orderNumber': formData.orderNumberSearch}:comparator" ng-dblclick="isDnDable ? '' : updateDell(ord)">
 														<td style="width: 12%">{{ $index + 1 }})</td>
 														<td style="width: 20%">{{ ord.createdDateTime | date:'dd/MM HH:mm' }}</td>
 														<td style="width: 25%">{{ ord.name }}</td>
