--- a/backend/src/main/webapp/app/views/dealer/main.html
+++ b/backend/src/main/webapp/app/views/dealer/main.html
@@ -82,7 +82,7 @@
 									<div class="form-group form-group-sm">
 										<label>Host : Port</label>
 								    	<div class="form-group input-group" style="margin-bottom: 10px;">
-									      	<input type="text" class="form-control" placeholder="Host IP" ng-model="dealer.ip">
+									      	<input type="text" class="form-control" placeholder="Host IP" ng-model="dealer.host">
 											<span class="input-group-addon">:</span>
 											<input type="number" class="form-control" placeholder="Port No." ng-model="dealer.port"/>
 									    </div>								    	
