--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -79,7 +79,7 @@
 					</form>
 					
 					<div class="row">
-						<div class="col-md-6" ng-repeat="rc in receiverList">
+						<div ng-class="{'col-md-12': receiverList.length == 1, 'col-md-6': receiverList.length > 1}" ng-repeat="rc in receiverList">
 							<div style="margin-bottom: 5px; margin-top: 10px; background-color: #85a985; border-radius: 5px; padding: 5px; border: .5px solid #ffffffa6;">
 								<span class="badge" style="background-color: #337ab7; font-size: 16px; 
 															padding: 5px 20px 5px 20px; border-radius: 13px; text-shadow: 1px 1px black;">
